# container4ml-aws

./: .dockerignore  .env.example  LICENSE  Makefile  README.md
.github/workflows/: deploy-container4ml.yml
1-simple/: .dockerignore  Dockerfile  Makefile  compose.yml  main.py  pyproject.toml
2-jupyter/: .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  train.ipynb
3-fastapi/: Dockerfile  compose.yml  main.py  pyproject.toml  setup.cfg
3-fastapi/k8s/: deployment.yml  kind-config.yml  service.yml
infra/: 01_setting.tf  02_s3.tf  03_ecr.tf  04_ci.tf  05_db.tf  06_network.tf  07_apprunner.tf
