[tool.poetry]
name = "container4ml-jupyter"
version = "0.1.0"
description = "Tutorial: training via jupyterlab with docker-compose"
authors = ["chck <shimekiri.today@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.2.4"
pandas = "^1.3.4"
ua-parser = "^0.10.0"
user-agents = "^2.2.0"
matplotlib = "^3.5.0"
scikit-learn = "^1.0.1"
fasttext-wheel = "^0.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
